add play video code

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -25,10 +25,6 @@ file(GLOB src_files
         ${CMAKE_SOURCE_DIR}/*.cpp
         ${CMAKE_SOURCE_DIR}/player/*.cpp)
 
-# Creates and names a library, sets it as either STATIC
-# or SHARED, and provides the relative paths to its source code.
-# You can define multiple libraries, and CMake builds them for you.
-# Gradle automatically packages shared libraries with your APK.
 
 add_library( # Sets the name of the library.
         ${lib_name}
@@ -37,37 +33,8 @@ add_library( # Sets the name of the library.
 
         ${src_files} )
 
-#add_library(avformat-lib STATIC IMPORTED)
-#
-#set_target_properties(avformat-lib
-#        PROPERTIES
-#        IMPORTED_LOCATION ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavformat.a)
-#
-#
-#add_library(avutil-lib STATIC IMPORTED)
-#
-#set_target_properties(avutil-lib
-#        PROPERTIES
-#        IMPORTED_LOCATION ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavutil.a)
 
-
-
-# Searches for a specified prebuilt library and stores the path as a
-# variable. Because CMake includes system libraries in the search path by
-# default, you only need to specify the name of the public NDK library
-# you want to add. CMake verifies that the library exists before
-# completing its build.
-
-#find_library(
-#        log-lib
-#        log )
-#
-#
-#find_library(
-#        android-lib
-#        android )
-
-
+# 第一种写法
 set(third-party-libs
         avformat
         avcodec
@@ -82,11 +49,73 @@ set(native-libs
         log
         z)
 
-# Specifies libraries CMake should link to your target library. You
-# can link multiple libraries, such as libraries you define in this
-# build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-                        ${lib_name}
-                        ${third-party-libs}
-                        ${native-libs})
+        ${lib_name}
+        ${third-party-libs}
+        ${native-libs})
+
+
+# 第二种写法
+
+#add_library(avformat-lib STATIC IMPORTED)
+#set_target_properties(avformat-lib
+#        PROPERTIES
+#        IMPORTED_LOCATION ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavformat.a)
+
+
+
+#add_library(avcodec-lib STATIC IMPORTED)
+#set_target_properties(avcodec-lib
+#        PROPERTIES
+#        IMPORTED_LOCATION ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavcodec.a)
+
+
+#add_library(avutil-lib STATIC IMPORTED)
+#set_target_properties(avutil-lib
+#        PROPERTIES
+#        IMPORTED_LOCATION ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavutil.a)
+
+
+#add_library(avfilter-lib STATIC IMPORTED)
+#set_target_properties(avfilter-lib
+#        PROPERTIES
+#        IMPORTED_LOCATION ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavfilter.a)
+
+
+#add_library(swresample-lib STATIC IMPORTED)
+#set_target_properties(swresample-lib
+#        PROPERTIES
+#        IMPORTED_LOCATION ${JNI_LIBS_DIR}/${ANDROID_ABI}/libswresample.a)
+
+
+#add_library(swscale-lib STATIC IMPORTED)
+#set_target_properties(swscale-lib
+#        PROPERTIES
+#        IMPORTED_LOCATION ${JNI_LIBS_DIR}/${ANDROID_ABI}/libswscale.a)
+
+
+#find_library(
+#        log-lib
+#        log )
+
+#find_library(
+#        android-lib
+#        android )
+
+
+#find_library(
+#        z-lib
+#        z )
+
+
+#target_link_libraries(${lib_name}
+#        ${log-lib}
+#        ${android-lib}
+#        ${z-lib}
+#        ${avformat-lib}
+#        ${avcodec-lib}
+#        ${avfilter-lib}
+#        ${swresample-lib}
+#        ${swscale-lib}
+#        ${avutil-lib})
