--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -14,7 +14,7 @@ set(lib_name native-player)
 set(JNI_LIBS_DIR ${CMAKE_SOURCE_DIR}/../jniLibs)
 
 
-include_directories(include player audio decoder render)
+include_directories(include player decoder render utils)
 
 
 link_directories(
@@ -23,10 +23,10 @@ link_directories(
 
 file(GLOB src_files
         ${CMAKE_SOURCE_DIR}/*.cpp
+        ${CMAKE_SOURCE_DIR}/utils/*.cpp
         ${CMAKE_SOURCE_DIR}/player/*.cpp
         ${CMAKE_SOURCE_DIR}/decoder/*.cpp
-        ${CMAKE_SOURCE_DIR}/render/*.cpp
-        ${CMAKE_SOURCE_DIR}/audio/*.cpp)
+        ${CMAKE_SOURCE_DIR}/render/*.cpp)
 
 
 add_library( # Sets the name of the library.
